framec_tests/language_specific/rust/v3_mir/positive/transition_inline_line_comment.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $B() // comment ok
            }
        }
}

