framec_tests/language_specific/rust/v3_mir/negative/native_after_terminal.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $B()
                let x = 1; // native after terminal
            }
        }
}

